<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#000000"
    tools:context=".fragment.PoolingFragment">

    <!-- Scrollable content -->

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/michroma"
        android:text="Pooling"
        android:textColor="@color/purpleText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        app:layout_constraintBottom_toTopOf="@id/bottom_buttons_layoute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkPurple"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <!-- Header -->

                <TextView
                    android:id="@+id/tv_target_entrants"
                    android:layout_width="297dp"
                    android:layout_height="wrap_content"
                    android:text="Target Entrants: 10"
                    android:textColor="@color/purpleText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_current_chosen"
                    android:layout_width="295dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Current Chosen: 6 / 10"
                    android:textColor="@color/purpleText"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Pool Button -->
            <Button
                android:id="@+id/btn_pool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pool Entrants"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/darkPurple"
                android:textColor="@android:color/white"/>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkPurple"
                android:layout_marginVertical="12dp"/>

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selected Entrants:"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/purpleText"
                android:layout_marginBottom="8dp"/>

            <!-- RecyclerView for selected entrants -->
            <ListView
                android:id="@+id/rv_selected_entrants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_user"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_buttons_layoute"
        android:layout_width="375dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>