...
            android:backgroundTint="@color/purpleText"
            android:text="Joined Events"
            android:textColor="@color/darkPurple"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_hosted_events"
            style="?attr/materialButtonOutlinedStyle"
            app:cornerRadius="0dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
...
            android:textColor="@color/darkPurple"
            android:textSize="12sp" />
    </LinearLayout>

    <!-- Scrollable ListView -->
    <ListView
        android:id="@+id/recycler_notifications"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
...
            android:drawableTop="@drawable/ic_notification"
            android:drawablePadding="6dp"
            android:drawableTint="@color/purpleText"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_events"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_events"
...
